; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_debug_name_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_debug_name_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name_entry = type { i8*, i32 }

@.str = private unnamed_addr constant [16 x i8] c"ent#%d %06o %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"(missing)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.name_entry*)* @debug_name_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @debug_name_entry(i32 %0, %struct.name_entry* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.name_entry*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.name_entry* %1, %struct.name_entry** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %7 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %6, i32 0, i32 0
  %8 = load i8*, i8** %7, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %12 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  br label %15

14:                                               ; preds = %2
  br label %15

15:                                               ; preds = %14, %10
  %16 = phi i32 [ %13, %10 ], [ 0, %14 ]
  %17 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %18 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %15
  %22 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %23 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  br label %26

25:                                               ; preds = %15
  br label %26

26:                                               ; preds = %25, %21
  %27 = phi i8* [ %24, %21 ], [ getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), %25 ]
  %28 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %16, i8* %27)
  ret void
}

declare dso_local i32 @printf(i8*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
